--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   </header>
 
   <body>
-    <div class="head">
+    <div class="sec1">
       <div class="title">
         <h3>Some page are finished and were up and running :)</h3>
         <a href="help.html"><button class="co">Page under construction!</button></a>
