Image optimasation for V7.2.1

--- a/osz.html
+++ b/osz.html
@@ -73,7 +73,7 @@
       <div class="sec1">
           <h1>Oshinizu</h1>
           <p>Oshinizu output electronic pulse current which is distributed based on massaging rhythms, stimulates the nerves, generating muscle movement without the requirement of the user, this is natural occurrence and direct result of the massager, it is designer in order to help alleviate pain, if uses correctly.</p>
-          <img src="img/osz-min.jpg" alt="Omizu Home Therapy">
+          <img src="img/osz.jpg" alt="Omizu Home Therapy">
       </div>
       <div class="bk">
         <button class="sect"><i class="arrow down"></i>Where to buy<i class="arrow down"></i></button>
