--- a/bapII.html
+++ b/bapII.html
@@ -73,7 +73,7 @@
       <div class="sec1">
           <h1>Body Acu-Pro II</h1>
           <p>Body Acupuncture-Pro II is a new generation of healt care product. It combines theories of Chinese therapeutic treatments and modern technology to produce a massage experience for the user. It can produce 6 different traditional massage techniques. <br><br> Body Acu-Pro II bring tranditinal massage available on the go in such a compact device.</p>
-          <img src="img/bapllon-min.png" alt="Body Acu-Pro II">
+          <img src="img/bapllon-min.jpg" alt="Body Acu-Pro II">
       </div>
       <div class="bk">
         <button class="sect"><i class="arrow down"></i>Where to buy<i class="arrow down"></i></button>
@@ -97,12 +97,12 @@
       </div>
       <div class="sec6">
         <h1>6 Different mode & 4 different automode </h1>
-        <img src="img/hmr.jpg" class="hmri" alt="Hammering">
-        <img src="img/acp.jpg" class="acpi" alt="Acupuncture">
-        <img src="img/npy.jpg" class="npyi" alt="Naprapathy">
-        <img src="img/cup.jpg" class="cupi" alt="Cupping">
-        <img src="img/scp.jpg" class="scpi" alt="Scraping">
-        <img src="img/msg.jpg" class="msgi" alt="Massage"><br>
+        <img src="img/hmr-min.jpg" class="hmri" alt="Hammering">
+        <img src="img/acp-min.jpg" class="acpi" alt="Acupuncture">
+        <img src="img/npy-min.jpg" class="npyi" alt="Naprapathy">
+        <img src="img/cup-min.jpg" class="cupi" alt="Cupping">
+        <img src="img/scp-min.jpg" class="scpi" alt="Scraping">
+        <img src="img/msg-min.jpg" class="msgi" alt="Massage"><br>
         <p class="hmr">Mode 1 <br>Hammering</p>
         <p class="acp">Mode 2 <br>Acupuncture</p>
         <p class="npy">Mode 3 <br>Naprapathy</p>
