--- a/aboutus.html
+++ b/aboutus.html
@@ -13,10 +13,21 @@
        gtag('config', 'UA-170457967-1');
     </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Omizu | About us</title>
-    <link rel="shortcut icon" href="img/favicon.png" type="image/png">
+    <title>The history of Omizu Sdn Bhd</title>
+    <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/nav.css">
     <link rel="stylesheet" type="text/css" href="css/aboutus.css">
+    <meta name="Description" content="Home therapy is our number one priority. We sell health care product to improve your life!">
+    <meta name="Keywords" content="Omizu Sdn Bhd, Omizu, health, health care, acupuncture, sauna, Malaysia">
+    <meta property="og:type" content="company">
+    <meta property="og:image" content="https://omizu.com.my/img/logonew.png">
+    <meta property="og:url" content="https://omizu.com.my/aboutus">
+    <meta property="og:title" content="The history of Omizu Sdn Bhd">
+    <meta property="og:description" content="Home therapy is our number 1 priority!">
+    <meta property="og:site_name" content="Omizu">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="The history of Omizu Sdn Bhd">
+    <link rel="canonical" href="https://omizu.com.my/aboutus">
   </head>
   <header>
     <header>
