--- a/bapII.html
+++ b/bapII.html
@@ -15,7 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Omizu Body Acu-Pro II | Portable | Acupuncture |</title>
     <meta name="Description" content="Body Acupuncture-Pro II is a new generation of healt care product. It combines theories of Chinese therapeutic treatments and modern technology to produce a massage experience for the user. It can produce 6 different traditional massage techniques.">
-    <meta name="Keywords" content="Omizu, health, health care, acupuncture, Malaysia, massage, compact device, body acu-pro, body acupuncture pro">
+    <meta name="Keywords" content="Omizu Sdn Bhd, Omizu, health, health care, acupuncture, Malaysia, massage, compact device, body acu-pro, body acupuncture pro">
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/nav.css">
     <link rel="stylesheet" type="text/css" href="css/bapll.css">
@@ -28,6 +28,7 @@
     <meta property="og:site_name" content="Omizu | Body Acu-Pro">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="https://omizu.com.my/bapII">
+    <link rel="canonical" href="https://omizu.com.my/bapII">
   </head>
   <header>
     <nav id="navbar">
@@ -78,8 +79,8 @@
       <div class="bk">
         <button class="sect"><i class="arrow down"></i>Where to buy<i class="arrow down"></i></button>
         <div class="sec3">
-          <a target="_blank" href="https://bit.ly/acuproII"><img src="img/lzd.png" alt=""></a>
-          <a target="_blank" href="https://bit.ly/BapIIs"><img class="shp" src="img/shp.jpg" alt=""></a>
+          <a target="_blank" rel="nofollow" href="https://bit.ly/acuproII"><img src="img/lzd.png" alt=""></a>
+          <a target="_blank" rel="nofollow" href="https://bit.ly/BapIIs"><img class="shp" src="img/shp.jpg" alt=""></a>
         </div>
       </div>
       <div class="bk"></div>
@@ -93,7 +94,7 @@
         <p>Like most smartphone it include lithium-ion rechargeable battery! <br> And charge it like a phone with micro-usb!</p><br>
         <h2>Dual Output Support?</h2>
         <p2>Yeah we also have dual output for you to use.</p2><br>
-        <img src="img/bapll_topwithtxt.png" alt="">
+        <img src="img/bapll_topwithtxt.jpg" alt="">
       </div>
       <div class="sec6">
         <h1>6 Different mode & 4 different automode </h1>
