--- a/chw.html
+++ b/chw.html
@@ -13,21 +13,21 @@
        gtag('config', 'UA-170457967-1');
     </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Omizu | Chinese Herbs | 3 Different Flavor</title>
-    <meta name="Description" content="Omizu | Chinese Herbs">
-    <meta name="Keywords" content="Omizu, health, health care, home therapy, Malaysia, acupuncture, portable, Oshinizu">
+    <title>Omizu | Cold Hot Wrap | Non-toxic | Reduce pain |</title>
+    <meta name="Description" content="Body Acupuncture-Pro II is a new generation of healt care product. It combines theories of Chinese therapeutic treatments and modern technology to produce a massage experience for the user. It can produce 6 different traditional massage techniques.">
+    <meta name="Keywords" content="Omizu Sdn Bhd, Omizu, health, health care, cold hot wrap, Malaysia, cold, hot, small, ">
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/nav.css">
-    <link rel="stylesheet" type="text/css" href="css/ch.css">
+    <link rel="stylesheet" type="text/css" href="css/chw.css">
     <meta property="og:type" content="company">
-    <meta property="og:image" content="https://omizu.com.my/img/cht-min.JPG">
-    <meta property="og:url" content="https://omizu.com.my/ch">
-    <meta property="og:title" content="Omizu | Chinese Herbs">
-    <meta property="og:description" content="Chinese Herbs is a accessories for Home Therapy">
-    <meta property="og:site_name" content="Omizu | Chinese Herbs">
+    <meta property="og:image" content="https://omizu.com.my/img/chw.jpg">
+    <meta property="og:url" content="https://omizu.com.my/chw">
+    <meta property="og:title" content="Cold Hot Wrap | Non-toxic | Reduce pain |">
+    <meta property="og:description" content="It provides convenient hot or cold theraphy treatment. It helps to reduce the severity of injury symptoms, pain and swelling. Unique non-toxic gel pack can stay hot and cold for up to 2 hours.">
+    <meta property="og:site_name" content="Cold Hot Wrap | Non-toxic | Reduce pain |">
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="https://omizu.com.my/ch">
-    <link rel="canonical" href="https://omizu.com.my/ch">
+    <meta name="twitter:site" content="https://omizu.com.my/chw">
+    <link rel="canonical" href="https://omizu.com.my/chw">
   </head>
   <header>
     <nav id="navbar">
@@ -71,42 +71,40 @@
   <body>
     <div class="head">
       <div class="sec1">
-          <h1>Chinese Herbs</h1>
-          <p>Chinese Herbs is a accessories for <a href="ht.html">Home Therapy</a>.</p>
-          <img src="img/ch-min.jpg" alt="Chinese Herbs with packaging">
+          <h1>Cold Hot Wrap</h1>
+          <p>It provides convenient hot or cold theraphy treatment. It helps to reduce the severity of injury symptoms, pain and swelling. Unique non-toxic gel pack can stay hot and cold for up to 2 hours.</p>
+          <img src="img/chw.jpg" alt="Cold Hot Wrap">
       </div>
       <div class="bk">
         <button class="sect"><i class="arrow down"></i>Where to buy<i class="arrow down"></i></button>
         <div class="sec3">
-          <a target="_blank" rel="nofollow" href="https://bit.ly/omizu-oszl"><img src="img/lzd.png" alt=""></a>
-          <a target="_blank" rel="nofollow" href="https://bit.ly/omizu-oszs"><img class="shp" src="img/shp.jpg" alt=""></a>
+          <a target="_blank" rel="nofollow" href="#"><img src="img/lzd.png" alt=""></a>
+          <a target="_blank" rel="nofollow" href="#"><img class="shp" src="img/shp.jpg" alt=""></a>
         </div>
-        <div class="bk"></div>
       </div>
+      <div class="bk"></div>
       <div class="sec2">
-        <img src="img/cht-min.jpg" alt="Chinese Herbs Close up">
-        <h2 class="body-s">Body Slimming</h2>
-        <p class="slim">Description</p>
-        <h2 class="body-b">Body Beauty</h2>
-        <p class="beau">Description</p>
-        <h2 class="body-w">Body Wellness</h2>
-        <p class="well">Description</p>
+          <img src="img/chw-instruction1.png" alt="">
+          <img src="img/chw-instruction2.png" alt="">
+          <img src="img/chw-instruction3.png" alt="">
+          <h2>Cook it</h2>
+          <h2>Bend it</h2>
+          <h2>Use it</h2>
+          <p>Take the Cold Hot Wrap out of the package and bend the coin and you can put it into boiling water and cook it for [time] at [temperature]</p>
+          <p>Then enjoy!</p>
+          <p></p>
       </div>
       <div class="bk"></div>
       <div class="sec4">
-        <div>
-          <h3>Specification</h3>
-          <h4>
-            -:<br>
-            -:<br>
-            -:<br>
-          </h4>
-          <p>
-            - <br>
-            - <br>
-            - <br>
-          </p>
-        </div>
+        <h3>Specification</h3>
+        <h4><br>
+           <br>
+           <br>
+            </h4>
+            <p><br>
+            <br>
+            <br>
+            </p>
       </div>
       <div class="bk"></div>
     </div>
@@ -133,3 +131,4 @@
 </html>
 
 <script src="js/js.js"></script>
+
