--- a/help.html
+++ b/help.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Omizu Customer Services | Whatsapp | Call us</title>
     <meta name="Description" content="Need our help? Just contact us! We accept whatsapp or you can call us!">
-    <meta name="Keywords" content="Omizu, health, health care, acupuncture, sauna, Malaysia, contact us, help, google map, location, customer services">
+    <meta name="Keywords" content="Omizu Sdn Bhd, Omizu, health, health care, acupuncture, sauna, Malaysia, contact us, help, google map, location, customer services">
     <meta property="og:type" content="company">
     <meta property="og:image" content="https://omizu.com.my/img/logonew.png">
     <meta property="og:url" content="https://omizu.com.my/help">
@@ -26,6 +26,7 @@
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/nav.css">
     <link rel="stylesheet" type="text/css" href="css/help.css">
+    <link rel="canonical" href="https://omizu.com.my/help">
   </head>
   <header>
     <nav id="navbar">
