--- a/ht.html
+++ b/ht.html
@@ -15,7 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Omizu Portable Home Therapy</title>
     <meta name="Description" content="Omizu Home Therapy">
-    <meta name="Keywords" content="Omizu, health, health care, home therapy, Malaysia, sauna, portable">
+    <meta name="Keywords" content="Omizu Sdn Bhd, Omizu, health, health care, home therapy, Malaysia, sauna, portable">
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/nav.css">
     <link rel="stylesheet" type="text/css" href="css/ht.css">
@@ -27,6 +27,7 @@
     <meta property="og:site_name" content="Omizu Home Therapy">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="https://omizu.com.my/ht">
+    <link rel="canonical" href="https://omizu.com.my/ht">
   </head>
   <header>
     <nav id="navbar">
@@ -77,8 +78,8 @@
       <div class="bk">
         <button class="sect"><i class="arrow down"></i>Where to buy<i class="arrow down"></i></button>
         <div class="sec3">
-          <a target="_blank" href="https://bit.ly/omizu-hometherapy"><img src="img/lzd.png" alt=""></a>
-          <a target="_blank" href="https://bit.ly/omizu-hometherapys"><img class="shp" src="img/shp.jpg" alt=""></a>
+          <a target="_blank" rel="nofollow" href="https://bit.ly/omizu-hometherapy"><img src="img/lzd.png" alt=""></a>
+          <a target="_blank" rel="nofollow" href="https://bit.ly/omizu-hometherapys"><img class="shp" src="img/shp.jpg" alt=""></a>
         </div>
       </div>
       <div class="bk"></div>
