--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     </script>
     <meta name="google-site-verification" content="_uLg0q1l6xeYxQnNBS5SoouF6xTDTOJh5VqP0VUpKMw" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Omizu | Health Care | Acupuncture | Sauna</title>
+    <title>Omizu home therapy is our number 1 priority!</title>
     <link rel="stylesheet" type="text/css" href="css/nav.css">
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <meta name="Description" content="Health is our number one priority. We sell health care product to improve your life!">
-    <meta name="Keywords" content="Omizu, health, health care, acupuncture, sauna, Malaysia">
+    <meta name="Keywords" content="Omizu Sdn Bhd, Omizu, health, health care, acupuncture, sauna, Malaysia">
     <meta property="og:type" content="company">
     <meta property="og:image" content="https://omizu.com.my/img/logonew.png">
     <meta property="og:url" content="https://omizu.com.my">
@@ -26,8 +26,9 @@
     <meta property="og:description" content="We sell health care product in Malaysia.">
     <meta property="og:site_name" content="Omizu">
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Omizu Health is our number one priority!">
+    <meta name="twitter:title" content="Omizu home therapy is our number 1 priority!">
     <link rel="shortcut icon" href="favicon.ico">
+    <link rel="canonical" href="https://omizu.com.my">
   </head>
   <header>
     <nav id="navbar">
