--- a/osz.html
+++ b/osz.html
@@ -15,7 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Omizu | Oshinizu | 2 output at the same time | 6 Different mode</title>
     <meta name="Description" content="Omizu | Oshinizu">
-    <meta name="Keywords" content="Omizu, health, health care, home therapy, Malaysia, acupuncture, portable, Oshinizu">
+    <meta name="Keywords" content="Omizu Sdn Bhd, Omizu, health, health care, home therapy, Malaysia, acupuncture, portable, Oshinizu">
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/nav.css">
     <link rel="stylesheet" type="text/css" href="css/osz.css">
@@ -23,11 +23,11 @@
     <meta property="og:image" content="https://omizu.com.my/img/osz-min.jpg">
     <meta property="og:url" content="https://omizu.com.my/osz">
     <meta property="og:title" content="Omizu | Oshinizu">
-    <meta property="og:description" content="Oshinizu is a new generation of healt care product. It combines theories of Chinese therapeutic treatments and modern technology to produce a massage experience for the user. It can produce 6 different traditional massage techniques.
-    ">
+    <meta property="og:description" content="Oshinizu is a new generation of healt care product. It combines theories of Chinese therapeutic treatments and modern technology to produce a massage experience for the user. It can produce 6 different traditional massage techniques.">
     <meta property="og:site_name" content="Omizu | Oshinizu">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="https://omizu.com.my/osz">
+    <link rel="canonical" href="https://omizu.com.my/osz">
   </head>
   <header>
     <nav id="navbar">
@@ -78,8 +78,8 @@
       <div class="bk">
         <button class="sect"><i class="arrow down"></i>Where to buy<i class="arrow down"></i></button>
         <div class="sec3">
-          <a target="_blank" href="https://bit.ly/omizu-oszl"><img src="img/lzd.png" alt=""></a>
-          <a target="_blank" href="https://bit.ly/omizu-oszs"><img class="shp" src="img/shp.jpg" alt=""></a>
+          <a target="_blank" rel="nofollow" href="https://bit.ly/omizu-oszl"><img src="img/lzd.png" alt=""></a>
+          <a target="_blank" rel="nofollow" href="https://bit.ly/omizu-oszs"><img class="shp" src="img/shp.jpg" alt=""></a>
         </div>
         <div class="bk"></div>
       </div>
