--- a/aboutus.html
+++ b/aboutus.html
@@ -30,44 +30,49 @@
     <link rel="canonical" href="https://omizu.com.my/aboutus">
   </head>
   <header>
-    <header>
-      <nav id="navbar">
-        <span id="open" onclick="openNav()">&#9776;</span>
-          <a class="alg" href="#"><img class="logo" src="img/omizu-logo.jpg" alt="omizu logo"></a>
-            <ul>
-              <li class="a"><a id="a" onclick="undone()" class="cu" href="#" style="background-color: #ff7d7d;">Home</a></li>
-              <li class="b"><a id="b" onclick="undone()" href="#" style="background-color: #ff7d7d;">About Us</a></li>
-              <div class="drop">
-                 <button class="dropbtn">Product <i class="arrow down"></i></button>
-                 <div class="drop-content">
-                  <div class="dropp">
-                    <button class="homebtn"><a href="ht.html"><i class="arrow left"></i> Home Therapy</a></button>
-                    <div class="home-content">
-                      <a href="ch.html">Chinese Herbs</a>
-                    </div>
+    <nav id="navbar">
+      <span id="open" onclick="openNav()">&#9776;</span>
+        <a class="alg" href="#"><img class="logo" src="img/omizu-logo.jpg" alt="omizu logo"></a>
+          <ul>
+            <li class="a"><a id="a" onclick="undone()" class="cu" href="#" style="background-color: #ff7d7d;">Home</a></li>
+            <li class="b"><a id="b" onclick="undone()" href="#" style="background-color: #ff7d7d;">About Us</a></li>
+            <div class="drop">
+               <button class="dropbtn">Product <i class="arrow down"></i></button>
+               <div class="drop-content">
+                <div class="dropp">
+                  <button class="homebtn"><a href="ht.html"><i class="arrow left"></i> Home Therapy</a></button>
+                  <div class="home-content">
+                    <a href="ch.html">Chinese Herbs</a>
                   </div>
-                   <a class="nav-bapII" href="bapII.html">Body Acu-Pro II</a>
-                   <a href="osz.html">Oshinizu</a>
-                 </div>
-              </div>
-              <li class="d"><a id="d" href="help.html">Help</a></li>
-            </ul>
-            <div id="msnav" class="">
-              <span id="close" class="close" onclick="cNav()">&#10006;</span>
-              <div id="snava">
-                <a class="home" href="index.html">Home</a>
-                <a href="aboutus.html">About Us</a>
-                <button class="nsect" href="#">Product  <i class="arrow down"></i></button>
-                <div id="nsec" class="nsec" >
-                    <a href="bapII.html"><i class="arrow right"></i>Body Acu-Pro II</a>
-                    <a href="ht.html"><i class="arrow right"></i>Home Therapy</a>
-                    <a href="osz.html"><i class="arrow right"></i>Oshinizu</a>
                 </div>
-                <a href="help.html">Help</a>
-              </div>
+                 <a class="nav-bapII" href="bapII.html">Body Acu-Pro II</a>
+                 <a href="osz.html">Oshinizu</a>
+                 <a href="chw.html">Cold Hot Wrap</a>
+               </div>
             </div>
-          </nav>
-    </header>
+            <li class="d"><a id="d" href="help.html">Help</a></li>
+          </ul>
+          <div id="msnav" class="">
+            <span id="close" class="close" onclick="cNav()">&#10006;</span>
+            <div id="snava">
+              <a class="home" href="index.html">Home</a>
+              <a href="aboutus.html">About Us</a>
+              <button class="nsect" href="#">Product  <i class="arrow down"></i></button>
+              <div id="nsec" class="nsec" >
+                <button style="background-color:#f3f3f3;" class="nsect"><i class="arrow right"></i>Home Therapy & Herbs</button>
+                <div style="background-color:#d8d8d8;" id="nsec" class="nsec">
+                  <a href="ht.html"><i class="arrow right"></i>Home Therapy</a>
+                  <a href="ch.html"><i class="arrow right"></i>Chinese Herbs</a>
+                </div>
+                  <a style="margin-top: 20px;" href="bapII.html"><i class="arrow right"></i>Body Acu-Pro II</a>
+                  <a href="chw.html"><i class="arrow right"></i>Cold Hot Wrap</a>
+                  <a href="osz.html"><i class="arrow right"></i>Oshinizu</a>
+              </div>
+              <a href="help.html">Help</a>
+            </div>
+          </div>
+        </nav>
+  </header>
 
   <body>
 
