--- a/help.html
+++ b/help.html
@@ -46,6 +46,7 @@
                 </div>
                  <a class="nav-bapII" href="bapII.html">Body Acu-Pro II</a>
                  <a href="osz.html">Oshinizu</a>
+                 <a href="chw.html">Cold Hot Wrap</a>
                </div>
             </div>
             <li class="d"><a id="d" href="help.html">Help</a></li>
@@ -57,8 +58,13 @@
               <a href="aboutus.html">About Us</a>
               <button class="nsect" href="#">Product  <i class="arrow down"></i></button>
               <div id="nsec" class="nsec" >
-                  <a href="bapII.html"><i class="arrow right"></i>Body Acu-Pro II</a>
+                <button style="background-color:#f3f3f3;" class="nsect"><i class="arrow right"></i>Home Therapy & Herbs</button>
+                <div style="background-color:#d8d8d8;" id="nsec" class="nsec">
                   <a href="ht.html"><i class="arrow right"></i>Home Therapy</a>
+                  <a href="ch.html"><i class="arrow right"></i>Chinese Herbs</a>
+                </div>
+                  <a style="margin-top: 20px;" href="bapII.html"><i class="arrow right"></i>Body Acu-Pro II</a>
+                  <a href="chw.html"><i class="arrow right"></i>Cold Hot Wrap</a>
                   <a href="osz.html"><i class="arrow right"></i>Oshinizu</a>
               </div>
               <a href="help.html">Help</a>
