--- a/chw.html
+++ b/chw.html
@@ -47,6 +47,7 @@
                 </div>
                  <a class="nav-bapII" href="bapII.html">Body Acu-Pro II</a>
                  <a href="osz.html">Oshinizu</a>
+                 <a href="chw.html">Cold Hot Wrap</a>
                </div>
             </div>
             <li class="d"><a id="d" href="help.html">Help</a></li>
@@ -58,8 +59,13 @@
               <a href="aboutus.html">About Us</a>
               <button class="nsect" href="#">Product  <i class="arrow down"></i></button>
               <div id="nsec" class="nsec" >
-                  <a href="bapII.html"><i class="arrow right"></i>Body Acu-Pro II</a>
+                <button style="background-color:#f3f3f3;" class="nsect"><i class="arrow right"></i>Home Therapy & Herbs</button>
+                <div style="background-color:#d8d8d8;" id="nsec" class="nsec">
                   <a href="ht.html"><i class="arrow right"></i>Home Therapy</a>
+                  <a href="ch.html"><i class="arrow right"></i>Chinese Herbs</a>
+                </div>
+                  <a style="margin-top: 20px;" href="bapII.html"><i class="arrow right"></i>Body Acu-Pro II</a>
+                  <a href="chw.html"><i class="arrow right"></i>Cold Hot Wrap</a>
                   <a href="osz.html"><i class="arrow right"></i>Oshinizu</a>
               </div>
               <a href="help.html">Help</a>
@@ -78,8 +84,8 @@
       <div class="bk">
         <button class="sect"><i class="arrow down"></i>Where to buy<i class="arrow down"></i></button>
         <div class="sec3">
-          <a target="_blank" rel="nofollow" href="#"><img src="img/lzd.png" alt=""></a>
-          <a target="_blank" rel="nofollow" href="#"><img class="shp" src="img/shp.jpg" alt=""></a>
+          <a target="" onClick="noProductpage()" rel="nofollow" href="#"><img src="img/lzd.png" alt=""></a>
+          <a target="" onClick="noProductpage()" rel="nofollow" href="#"><img class="shp" src="img/shp.jpg" alt=""></a>
         </div>
       </div>
       <div class="bk"></div>
@@ -91,8 +97,8 @@
           <h2>Bend it</h2>
           <h2>Use it</h2>
           <p>Take the Cold Hot Wrap out of the package and bend the coin and you can put it into boiling water and cook it for [time] at [temperature]</p>
-          <p>Then enjoy!</p>
-          <p></p>
+          <p>After cooking it with boiling water bend the coin and it will start producing heat!</p>
+          <p>After all that you can start enjoying it!</p>
       </div>
       <div class="bk"></div>
       <div class="sec4">
