--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
 
   <body>
     <div class="sec1">
-      <div class="title">
-        <h3>Some page are finished and were up and running :)</h3>
-        <a href="help.html"><button class="co">Page under construction!</button></a>
-      </div>
+        <img src="img/omz_hm_desktop.jpg" alt="Top 3 products on Omizu">
+        <h1>Home Therapy & Acupuncture</h1>
+        <p>Home Therapy</p>
+        <button class="co" onclick="openProducts()">See all products</button>
     </div>
   </body>
 
